# CppProjectForLearn

./: main.cpp
CommandLineCalculator/: CMakeLists.txt
TerminalTextEditor/: CMakeLists.txt  main.cpp
TerminalTextEditor/include/: CommandManager.h  FileHandler.h  Terminal.h  TextBuffer.h
TerminalTextEditor/src/: CommandManager.cpp  FileHandler.cpp  Terminal.cpp  TextBuffer.cpp
